--- a/notebooks/Exercices_1.ipynb
+++ b/notebooks/Exercices_1.ipynb
@@ -401,33 +401,128 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 82,
       "id": "dd4e48d7-532e-40a6-a7c8-1ede5ce68502",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 204
+          "base_uri": "https://localhost:8080/"
         },
         "id": "dd4e48d7-532e-40a6-a7c8-1ede5ce68502",
-        "outputId": "da71910f-f65b-4750-c01e-14940bd11333"
+        "outputId": "25540e09-7716-474e-f97d-9c5cc55dbad6"
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'X_train' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-1872355255.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# train the model here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mhistory\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'X_train' is not defined"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/50\n",
+            "25/25 - 1s - 57ms/step - MeanSquaredError: 1.0821 - loss: 1.0821\n",
+            "Epoch 2/50\n",
+            "25/25 - 0s - 8ms/step - MeanSquaredError: 0.5019 - loss: 0.5019\n",
+            "Epoch 3/50\n",
+            "25/25 - 0s - 6ms/step - MeanSquaredError: 0.2983 - loss: 0.2983\n",
+            "Epoch 4/50\n",
+            "25/25 - 0s - 6ms/step - MeanSquaredError: 0.2568 - loss: 0.2568\n",
+            "Epoch 5/50\n",
+            "25/25 - 0s - 6ms/step - MeanSquaredError: 0.2485 - loss: 0.2485\n",
+            "Epoch 6/50\n",
+            "25/25 - 0s - 4ms/step - MeanSquaredError: 0.2420 - loss: 0.2420\n",
+            "Epoch 7/50\n",
+            "25/25 - 0s - 3ms/step - MeanSquaredError: 0.2359 - loss: 0.2359\n",
+            "Epoch 8/50\n",
+            "25/25 - 0s - 3ms/step - MeanSquaredError: 0.2299 - loss: 0.2299\n",
+            "Epoch 9/50\n",
+            "25/25 - 0s - 3ms/step - MeanSquaredError: 0.2247 - loss: 0.2247\n",
+            "Epoch 10/50\n",
+            "25/25 - 0s - 3ms/step - MeanSquaredError: 0.2196 - loss: 0.2196\n",
+            "Epoch 11/50\n",
+            "25/25 - 0s - 6ms/step - MeanSquaredError: 0.2148 - loss: 0.2148\n",
+            "Epoch 12/50\n",
+            "25/25 - 0s - 3ms/step - MeanSquaredError: 0.2100 - loss: 0.2100\n",
+            "Epoch 13/50\n",
+            "25/25 - 0s - 3ms/step - MeanSquaredError: 0.2056 - loss: 0.2056\n",
+            "Epoch 14/50\n",
+            "25/25 - 0s - 6ms/step - MeanSquaredError: 0.2014 - loss: 0.2014\n",
+            "Epoch 15/50\n",
+            "25/25 - 0s - 4ms/step - MeanSquaredError: 0.1974 - loss: 0.1974\n",
+            "Epoch 16/50\n",
+            "25/25 - 0s - 3ms/step - MeanSquaredError: 0.1936 - loss: 0.1936\n",
+            "Epoch 17/50\n",
+            "25/25 - 0s - 3ms/step - MeanSquaredError: 0.1895 - loss: 0.1895\n",
+            "Epoch 18/50\n",
+            "25/25 - 0s - 6ms/step - MeanSquaredError: 0.1854 - loss: 0.1854\n",
+            "Epoch 19/50\n",
+            "25/25 - 0s - 3ms/step - MeanSquaredError: 0.1798 - loss: 0.1798\n",
+            "Epoch 20/50\n",
+            "25/25 - 0s - 3ms/step - MeanSquaredError: 0.1743 - loss: 0.1743\n",
+            "Epoch 21/50\n",
+            "25/25 - 0s - 3ms/step - MeanSquaredError: 0.1697 - loss: 0.1697\n",
+            "Epoch 22/50\n",
+            "25/25 - 0s - 3ms/step - MeanSquaredError: 0.1657 - loss: 0.1657\n",
+            "Epoch 23/50\n",
+            "25/25 - 0s - 6ms/step - MeanSquaredError: 0.1620 - loss: 0.1620\n",
+            "Epoch 24/50\n",
+            "25/25 - 0s - 3ms/step - MeanSquaredError: 0.1576 - loss: 0.1576\n",
+            "Epoch 25/50\n",
+            "25/25 - 0s - 6ms/step - MeanSquaredError: 0.1538 - loss: 0.1538\n",
+            "Epoch 26/50\n",
+            "25/25 - 0s - 3ms/step - MeanSquaredError: 0.1502 - loss: 0.1502\n",
+            "Epoch 27/50\n",
+            "25/25 - 0s - 3ms/step - MeanSquaredError: 0.1471 - loss: 0.1471\n",
+            "Epoch 28/50\n",
+            "25/25 - 0s - 3ms/step - MeanSquaredError: 0.1433 - loss: 0.1433\n",
+            "Epoch 29/50\n",
+            "25/25 - 0s - 6ms/step - MeanSquaredError: 0.1401 - loss: 0.1401\n",
+            "Epoch 30/50\n",
+            "25/25 - 0s - 3ms/step - MeanSquaredError: 0.1370 - loss: 0.1370\n",
+            "Epoch 31/50\n",
+            "25/25 - 0s - 6ms/step - MeanSquaredError: 0.1337 - loss: 0.1337\n",
+            "Epoch 32/50\n",
+            "25/25 - 0s - 3ms/step - MeanSquaredError: 0.1307 - loss: 0.1307\n",
+            "Epoch 33/50\n",
+            "25/25 - 0s - 3ms/step - MeanSquaredError: 0.1278 - loss: 0.1278\n",
+            "Epoch 34/50\n",
+            "25/25 - 0s - 3ms/step - MeanSquaredError: 0.1252 - loss: 0.1252\n",
+            "Epoch 35/50\n",
+            "25/25 - 0s - 4ms/step - MeanSquaredError: 0.1226 - loss: 0.1226\n",
+            "Epoch 36/50\n",
+            "25/25 - 0s - 3ms/step - MeanSquaredError: 0.1198 - loss: 0.1198\n",
+            "Epoch 37/50\n",
+            "25/25 - 0s - 3ms/step - MeanSquaredError: 0.1173 - loss: 0.1173\n",
+            "Epoch 38/50\n",
+            "25/25 - 0s - 6ms/step - MeanSquaredError: 0.1145 - loss: 0.1145\n",
+            "Epoch 39/50\n",
+            "25/25 - 0s - 3ms/step - MeanSquaredError: 0.1119 - loss: 0.1119\n",
+            "Epoch 40/50\n",
+            "25/25 - 0s - 3ms/step - MeanSquaredError: 0.1093 - loss: 0.1093\n",
+            "Epoch 41/50\n",
+            "25/25 - 0s - 3ms/step - MeanSquaredError: 0.1070 - loss: 0.1070\n",
+            "Epoch 42/50\n",
+            "25/25 - 0s - 3ms/step - MeanSquaredError: 0.1047 - loss: 0.1047\n",
+            "Epoch 43/50\n",
+            "25/25 - 0s - 3ms/step - MeanSquaredError: 0.1022 - loss: 0.1022\n",
+            "Epoch 44/50\n",
+            "25/25 - 0s - 3ms/step - MeanSquaredError: 0.1008 - loss: 0.1008\n",
+            "Epoch 45/50\n",
+            "25/25 - 0s - 3ms/step - MeanSquaredError: 0.0983 - loss: 0.0983\n",
+            "Epoch 46/50\n",
+            "25/25 - 0s - 4ms/step - MeanSquaredError: 0.0963 - loss: 0.0963\n",
+            "Epoch 47/50\n",
+            "25/25 - 0s - 3ms/step - MeanSquaredError: 0.0947 - loss: 0.0947\n",
+            "Epoch 48/50\n",
+            "25/25 - 0s - 3ms/step - MeanSquaredError: 0.0931 - loss: 0.0931\n",
+            "Epoch 49/50\n",
+            "25/25 - 0s - 3ms/step - MeanSquaredError: 0.0911 - loss: 0.0911\n",
+            "Epoch 50/50\n",
+            "25/25 - 0s - 3ms/step - MeanSquaredError: 0.0899 - loss: 0.0899\n"
           ]
         }
       ],
       "source": [
         "# train the model here\n",
-        "history = model.fit(train., train.gamma(), verbose=2, epochs=1)\n",
-        "\n"
+        "y_train = train.gamma\n",
+        "X_train = train[[\"kx\", \"ky\", \"chi_perp\", \"chi_par\", \"C\"]]\n",
+        "history = model.fit(X_train, y_train, verbose=2, epochs=50)"
       ]
     },
     {
